syntax = "proto3";
package user;
option go_package = ".;pb";

message UserModel{
  // @inject_tag: json:"id"
  uint32 ID=1;
  // @inject_tag: json:"user_name"
  string UserName=2;
  // @inject_tag: json:"avatar"
  string Avatar=3;
  // @inject_tag: json:"email"
  string Email=4;
  // @inject_tag: json:"nickname"
  string NickName=5;
  // @inject_tag: json:"status"
  string Status=6;
  // @inject_tag: json:"limit"
  uint32 Limit=7;
  // @inject_tag: json:"created_at"
  int64 CreatedAt=8;
  // @inject_tag: json:"updated_at"
  int64 UpdatedAt=9;
  // @inject_tag: json:"deleted_at"
  int64 DeletedAt=10;
}
message UserRequest{
  string UserName=1;
  string PassWord=2;
  string PassWordConfirm=3;
}
message UserDetailResponse{
    UserModel UserDetail=1;
    uint32 Code=2;
}
service UserService{
  rpc UserLogin(UserRequest) returns(UserDetailResponse);
  rpc UserRegister(UserRequest) returns(UserDetailResponse);

}